--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <p>Alpha Delta. Radio confirmed.</p>
+      <p>Shit is getting real. theres zombies everywhere be careful!</p>
    </body>
 </html> 
