--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
       <p>Radio check. Pilot, please confirm.</p>
       <p>Alpha Delta. Radio confirmed.</p>
       <p>Shit is getting real. theres zombies everywhere be careful!</p>
+      <p>Readying orbital cannon array ZD:110</p>
    </body>
 </html> 
