--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
       <p>Alpha Delta. Radio confirmed.</p>
       <p>Shit is getting real. theres zombies everywhere be careful!</p>
       <p>Readying orbital cannon array ZD:110</p>
+      <p> You have a bowgie on your tail. Fire when ready.</p>
    </body>
 </html> 
